nft image was not showing - fixed

--- a/challenges/01_nft-preview-card/scss/01_style.scss
+++ b/challenges/01_nft-preview-card/scss/01_style.scss
@@ -60,7 +60,7 @@
   width: 35rem;
 
   &__image-container {
-    background-image: url(./images/image-equilibrium.jpg);
+    background-image: url(../images/image-equilibrium.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 1rem;
